fix word wrapping in sidebar, re #8163

--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -59,7 +59,7 @@ ul.widget-list {
         background-position: 0 1px;
         background-size: 16px 16px;
         padding-left: 20px;
-        word-break: break-all;
+        word-wrap: break-word;
     }
 }
 div#sidebar-navigation {
